[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Items/Weapons/Attachment/WeaponAttachment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Items/Weapons/Attachment/Flamethrower/AttachmentFlamethrower.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[node name="AttachmentFlamethrower" instance=ExtResource( 1 )]
script = ExtResource( 2 )
attack_delay = 4.0
attack_cost = 50.0
modifiers = {
"fire": {
"dps": 2.5,
"duration": 3.0,
"initial_damage": 0.0
}
}

[node name="Duration" type="Timer" parent="." index="2"]

[node name="Tick" type="Timer" parent="." index="3"]
one_shot = true

[node name="AreaOfEffect" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfEffect" index="0"]
position = Vector2( 20, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="Tick" to="." method="_on_Tick_timeout"]
